Add a language specification to a prompt. Fix some bugs in frontend in aggregation